--- a/res/drawable/floating_action_button_bg.xml
+++ b/res/drawable/floating_action_button_bg.xml
@@ -16,5 +16,5 @@
 -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
      android:shape="oval">
-          <solid android:color="@color/theme_accent" />
+          <solid android:color="@color/default_notification_color" />
 </shape>
