--- a/res/drawable/floating_action_button_bg_selector.xml
+++ b/res/drawable/floating_action_button_bg_selector.xml
@@ -17,7 +17,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
      <item android:state_pressed="true">
           <shape android:shape="oval">
-               <solid android:color="@color/floating_action_button_pressed_color" />
+               <solid android:color="@android:color/white" />
           </shape>
      </item>
 </selector>
