--- a/res/values/themes.xml
+++ b/res/values/themes.xml
@@ -20,4 +20,19 @@
         <item name="android:colorPrimaryDark">@color/theme_primary_dark</item>
         <item name="android:colorAccent">@color/theme_accent</item>
     </style>
+
+    <style name="ThemeOverlay.LightStatusBar" parent="@android:style/Theme.Material.Light.LightStatusBar">
+        <item name="android:colorPrimaryDark">@color/background_light_system_bars</item>
+        <item name="android:windowLightStatusBar">true</item>
+    </style>
+
+    <style name="ThemeOverlay.LightNavigationBar" parent="@style/AppTheme">
+        <item name="android:windowLightNavigationBar">true</item>
+        <item name="android:navigationBarColor">@color/background_light_system_bars</item>
+    </style>
+
+    <style name="ThemeOverlay.LightStatusBar.LightNavigationBar">
+        <item name="android:windowLightNavigationBar">true</item>
+        <item name="android:navigationBarColor">@color/background_light_system_bars</item>
+    </style>
 </resources>
